RESOLVED FIXED216520
REGRESSION (r267002): ASSERTION FAILED:[ iOS wk2 Debug ] !HashTranslator::equal(KeyTraits::emptyValue(), key) on compositing/ios/overflow-scroll-update-overlap.html
https://bugs.webkit.org/show_bug.cgi?id=216520
Summary REGRESSION (r267002): ASSERTION FAILED:[ iOS wk2 Debug ] !HashTranslator::equ...
Hector Lopez
Reported 2020-09-14 19:41:27 PDT
compositing/ios/overflow-scroll-update-overlap.html Test is a constant crash according to history on iOS wk2 Debug. First occurrence is at r267002. History: https://results.webkit.org/?suite=layout-tests&test=compositing%2Fios%2Foverflow-scroll-update-overlap.html Crash Log: Thread 0 Crashed: 0 com.apple.JavaScriptCore 0x0000000215bdae2e WTFCrash + 14 (Assertions.cpp:295) 1 com.apple.WebKit 0x00000002000a930b WTFCrashWithInfo(int, char const*, char const*, int) + 27 2 com.apple.WebKit 0x00000002003f9f6b void WTF::HashTable<unsigned long long, unsigned long long, WTF::IdentityExtractor, WTF::DefaultHash<unsigned long long>, WTF::HashTraits<unsigned long long>, WTF::HashTraits<unsigned long long> >::checkKey<WTF::IdentityHashTranslator<WTF::HashTraits<unsigned long long>, WTF::DefaultHash<unsigned long long> >, unsigned long long>(unsigned long long const&) + 139 (HashTable.h:647) 3 com.apple.WebKit 0x00000002003f9df4 unsigned long long* WTF::HashTable<unsigned long long, unsigned long long, WTF::IdentityExtractor, WTF::DefaultHash<unsigned long long>, WTF::HashTraits<unsigned long long>, WTF::HashTraits<unsigned long long> >::inlineLookup<WTF::IdentityHashTranslator<WTF::HashTraits<unsigned long long>, WTF::DefaultHash<unsigned long long> >, unsigned long long>(unsigned long long const&) + 36 (HashTable.h:670) 4 com.apple.WebKit 0x00000002003f9dbd unsigned long long* WTF::HashTable<unsigned long long, unsigned long long, WTF::IdentityExtractor, WTF::DefaultHash<unsigned long long>, WTF::HashTraits<unsigned long long>, WTF::HashTraits<unsigned long long> >::lookup<WTF::IdentityHashTranslator<WTF::HashTraits<unsigned long long>, WTF::DefaultHash<unsigned long long> >, unsigned long long>(unsigned long long const&) + 29 (HashTable.h:661) 5 com.apple.WebKit 0x00000002003f9d78 bool WTF::HashTable<unsigned long long, unsigned long long, WTF::IdentityExtractor, WTF::DefaultHash<unsigned long long>, WTF::HashTraits<unsigned long long>, WTF::HashTraits<unsigned long long> >::contains<WTF::IdentityHashTranslator<WTF::HashTraits<unsigned long long>, WTF::DefaultHash<unsigned long long> >, unsigned long long>(unsigned long long const&) const + 56 (HashTable.h:1098) 6 com.apple.WebKit 0x00000002003f9d2d WTF::HashTable<unsigned long long, unsigned long long, WTF::IdentityExtractor, WTF::DefaultHash<unsigned long long>, WTF::HashTraits<unsigned long long>, WTF::HashTraits<unsigned long long> >::contains(unsigned long long const&) const + 29 (HashTable.h:477) 7 com.apple.WebKit 0x00000002003f662d WTF::HashSet<unsigned long long, WTF::DefaultHash<unsigned long long>, WTF::HashTraits<unsigned long long> >::contains(unsigned long long const&) const + 29 (HashSet.h:219) 8 com.apple.WebKit 0x000000020133be26 WebKit::RemoteScrollingCoordinator::isUserScrollInProgress(unsigned long long) const + 38 (RemoteScrollingCoordinator.mm:82) 9 com.apple.WebCore 0x0000000221778cd1 WebCore::RenderLayer::isUserScrollInProgress() const + 113 (RenderLayer.cpp:1896) 10 com.apple.WebCore 0x0000000221783d26 WebCore::RenderLayer::updateScrollInfoAfterLayout() + 150 (RenderLayer.cpp:3921) 11 com.apple.WebCore 0x0000000221610900 WebCore::RenderBlock::updateScrollInfoAfterLayout() + 224 (RenderBlock.cpp:589)
Attachments
Patch (4.20 KB, patch)
2020-09-15 10:51 PDT, Simon Fraser (smfr)
no flags
Radar WebKit Bug Importer
Comment 1 2020-09-14 19:41:48 PDT
Hector Lopez
Comment 2 2020-09-14 19:49:31 PDT
Test expectation adjusted for crash: https://trac.webkit.org/changeset/267068/webkit
Hector Lopez
Comment 3 2020-09-14 20:28:43 PDT
fast/scrolling/ios/click-events-during-momentum-scroll-in-overflow.html Test is also a constant crash with same ASSERTION FAILED starting at same regression point r267002. History: https://results.webkit.org/?suite=layout-tests&test=fast%2Fscrolling%2Fios%2Fclick-events-during-momentum-scroll-in-overflow.html Stderr(no crash log): No crash log found for com.apple.WebKit.WebContent.Development:73459. stdout: stderr: ASSERTION FAILED: !HashTranslator::equal(KeyTraits::emptyValue(), key) /Volumes/Data/slave/ios-simulator-13-debug/build/WebKitBuild/Debug-iphonesimulator/usr/local/include/wtf/HashTable.h(647) : void WTF::HashTable<unsigned long long, unsigned long long, WTF::IdentityExtractor, WTF::DefaultHash<unsigned long long>, WTF::HashTraits<unsigned long long>, WTF::HashTraits<unsigned long long> >::checkKey(const T &) [Key = unsigned long long, Value = unsigned long long, Extractor = WTF::IdentityExtractor, HashFunctions = WTF::DefaultHash<unsigned long long>, Traits = WTF::HashTraits<unsigned long long>, KeyTraits = WTF::HashTraits<unsigned long long>, HashTranslator = WTF::IdentityHashTranslator<WTF::HashTraits<unsigned long long>, WTF::DefaultHash<unsigned long long> >, T = unsigned long long] 1 0x11a73fe29 WTFCrash 2 0x104b0730b WTFCrashWithInfo(int, char const*, char const*, int) 3 0x104e57f6b void WTF::HashTable<unsigned long long, unsigned long long, WTF::IdentityExtractor, WTF::DefaultHash<unsigned long long>, WTF::HashTraits<unsigned long long>, WTF::HashTraits<unsigned long long> >::checkKey<WTF::IdentityHashTranslator<WTF::HashTraits<unsigned long long>, WTF::DefaultHash<unsigned long long> >, unsigned long long>(unsigned long long const&) 4 0x104e57df4 unsigned long long* WTF::HashTable<unsigned long long, unsigned long long, WTF::IdentityExtractor, WTF::DefaultHash<unsigned long long>, WTF::HashTraits<unsigned long long>, WTF::HashTraits<unsigned long long> >::inlineLookup<WTF::IdentityHashTranslator<WTF::HashTraits<unsigned long long>, WTF::DefaultHash<unsigned long long> >, unsigned long long>(unsigned long long const&) 5 0x104e57dbd unsigned long long* WTF::HashTable<unsigned long long, unsigned long long, WTF::IdentityExtractor, WTF::DefaultHash<unsigned long long>, WTF::HashTraits<unsigned long long>, WTF::HashTraits<unsigned long long> >::lookup<WTF::IdentityHashTranslator<WTF::HashTraits<unsigned long long>, WTF::DefaultHash<unsigned long long> >, unsigned long long>(unsigned long long const&) 6 0x104e57d78 bool WTF::HashTable<unsigned long long, unsigned long long, WTF::IdentityExtractor, WTF::DefaultHash<unsigned long long>, WTF::HashTraits<unsigned long long>, WTF::HashTraits<unsigned long long> >::contains<WTF::IdentityHashTranslator<WTF::HashTraits<unsigned long long>, WTF::DefaultHash<unsigned long long> >, unsigned long long>(unsigned long long const&) const 7 0x104e57d2d WTF::HashTable<unsigned long long, unsigned long long, WTF::IdentityExtractor, WTF::DefaultHash<unsigned long long>, WTF::HashTraits<unsigned long long>, WTF::HashTraits<unsigned long long> >::contains(unsigned long long const&) const 8 0x104e5462d WTF::HashSet<unsigned long long, WTF::DefaultHash<unsigned long long>, WTF::HashTraits<unsigned long long> >::contains(unsigned long long const&) const 9 0x105d99e26 WebKit::RemoteScrollingCoordinator::isUserScrollInProgress(unsigned long long) const 10 0x1262ddcd1 WebCore::RenderLayer::isUserScrollInProgress() const 11 0x1262e8d26 WebCore::RenderLayer::updateScrollInfoAfterLayout() 12 0x126175900 WebCore::RenderBlock::updateScrollInfoAfterLayout() 13 0x126193270 WebCore::RenderBlockFlow::layoutBlock(bool, WebCore::LayoutUnit) 14 0x1261759a9 WebCore::RenderBlock::layout() 15 0x126195842 WebCore::RenderBlockFlow::layoutBlockChild(WebCore::RenderBox&, WebCore::RenderBlockFlow::MarginInfo&, WebCore::LayoutUnit&, WebCore::LayoutUnit&) 16 0x126193e04 WebCore::RenderBlockFlow::layoutBlockChildren(bool, WebCore::LayoutUnit&) 17 0x126192bb6 WebCore::RenderBlockFlow::layoutBlock(bool, WebCore::LayoutUnit) 18 0x1261759a9 WebCore::RenderBlock::layout() 19 0x126195842 WebCore::RenderBlockFlow::layoutBlockChild(WebCore::RenderBox&, WebCore::RenderBlockFlow::MarginInfo&, WebCore::LayoutUnit&, WebCore::LayoutUnit&) 20 0x126193e04 WebCore::RenderBlockFlow::layoutBlockChildren(bool, WebCore::LayoutUnit&) 21 0x126192bb6 WebCore::RenderBlockFlow::layoutBlock(bool, WebCore::LayoutUnit) 22 0x1261759a9 WebCore::RenderBlock::layout() 23 0x126195842 WebCore::RenderBlockFlow::layoutBlockChild(WebCore::RenderBox&, WebCore::RenderBlockFlow::MarginInfo&, WebCore::LayoutUnit&, WebCore::LayoutUnit&) 24 0x126193e04 WebCore::RenderBlockFlow::layoutBlockChildren(bool, WebCore::LayoutUnit&) 25 0x126192bb6 WebCore::RenderBlockFlow::layoutBlock(bool, WebCore::LayoutUnit) 26 0x1261759a9 WebCore::RenderBlock::layout() 27 0x126452da3 WebCore::RenderView::layout() 28 0x1258cccbf WebCore::FrameViewLayoutContext::layout() 29 0x1249ee656 WebCore::Document::updateLayout() 30 0x105dfc103 WebKit::WebPage::shrinkToFitContent(WebKit::WebPage::ZoomToInitialScale) 31 0x1063c78ef WebKit::WebPage::didFinishDocumentLoad(WebKit::WebFrame&) LEAK: 2 WebPageProxy Test expectation for fast/scrolling/ios/click-events-during-momentum-scroll-in-overflow.html: https://trac.webkit.org/changeset/267070/webkit
Hector Lopez
Comment 4 2020-09-14 20:43:22 PDT
scrollingcoordinator/ios/fixed-frame-overflow-swipe.html Test is also a constant crash with similar ASSERTION FAILED starting at same regression point r267002. History: https://results.webkit.org/?suite=layout-tests&test=scrollingcoordinator%2Fios%2Ffixed-frame-overflow-swipe.html Crash Log: Thread 0 Crashed: 0 com.apple.JavaScriptCore 0x00000004ddbdae2e WTFCrash + 14 (Assertions.cpp:295) 1 com.apple.WebKit 0x00000004c80a930b WTFCrashWithInfo(int, char const*, char const*, int) + 27 2 com.apple.WebKit 0x00000004c83f9f6b void WTF::HashTable<unsigned long long, unsigned long long, WTF::IdentityExtractor, WTF::DefaultHash<unsigned long long>, WTF::HashTraits<unsigned long long>, WTF::HashTraits<unsigned long long> >::checkKey<WTF::IdentityHashTranslator<WTF::HashTraits<unsigned long long>, WTF::DefaultHash<unsigned long long> >, unsigned long long>(unsigned long long const&) + 139 (HashTable.h:647) 3 com.apple.WebKit 0x00000004c83f9df4 unsigned long long* WTF::HashTable<unsigned long long, unsigned long long, WTF::IdentityExtractor, WTF::DefaultHash<unsigned long long>, WTF::HashTraits<unsigned long long>, WTF::HashTraits<unsigned long long> >::inlineLookup<WTF::IdentityHashTranslator<WTF::HashTraits<unsigned long long>, WTF::DefaultHash<unsigned long long> >, unsigned long long>(unsigned long long const&) + 36 (HashTable.h:670) 4 com.apple.WebKit 0x00000004c83f9dbd unsigned long long* WTF::HashTable<unsigned long long, unsigned long long, WTF::IdentityExtractor, WTF::DefaultHash<unsigned long long>, WTF::HashTraits<unsigned long long>, WTF::HashTraits<unsigned long long> >::lookup<WTF::IdentityHashTranslator<WTF::HashTraits<unsigned long long>, WTF::DefaultHash<unsigned long long> >, unsigned long long>(unsigned long long const&) + 29 (HashTable.h:661) 5 com.apple.WebKit 0x00000004c83f9d78 bool WTF::HashTable<unsigned long long, unsigned long long, WTF::IdentityExtractor, WTF::DefaultHash<unsigned long long>, WTF::HashTraits<unsigned long long>, WTF::HashTraits<unsigned long long> >::contains<WTF::IdentityHashTranslator<WTF::HashTraits<unsigned long long>, WTF::DefaultHash<unsigned long long> >, unsigned long long>(unsigned long long const&) const + 56 (HashTable.h:1098) 6 com.apple.WebKit 0x00000004c83f9d2d WTF::HashTable<unsigned long long, unsigned long long, WTF::IdentityExtractor, WTF::DefaultHash<unsigned long long>, WTF::HashTraits<unsigned long long>, WTF::HashTraits<unsigned long long> >::contains(unsigned long long const&) const + 29 (HashTable.h:477) 7 com.apple.WebKit 0x00000004c83f662d WTF::HashSet<unsigned long long, WTF::DefaultHash<unsigned long long>, WTF::HashTraits<unsigned long long> >::contains(unsigned long long const&) const + 29 (HashSet.h:219) 8 com.apple.WebKit 0x00000004c933be26 WebKit::RemoteScrollingCoordinator::isUserScrollInProgress(unsigned long long) const + 38 (RemoteScrollingCoordinator.mm:82) 9 com.apple.WebCore 0x00000004e9778cd1 WebCore::RenderLayer::isUserScrollInProgress() const + 113 (RenderLayer.cpp:1896) Test expectation for scrollingcoordinator/ios/fixed-frame-overflow-swipe.html: https://trac.webkit.org/changeset/267072/webkit
Simon Fraser (smfr)
Comment 5 2020-09-15 10:51:00 PDT
EWS
Comment 6 2020-09-15 11:39:29 PDT
Committed r267092: <https://trac.webkit.org/changeset/267092> All reviewed patches have been landed. Closing bug and clearing flags on attachment 408831 [details].
Note You need to log in before you can comment on or make changes to this bug.