Cherry-pick r267092. rdar://problem/69594199

REGRESSION (r267002): ASSERTION FAILED:[ iOS wk2 Debug ] !HashTranslator::equal(KeyTraits::emptyValue(), key) on compositing/ios/overflow-scroll-update-overlap.html
    https://bugs.webkit.org/show_bug.cgi?id=216520
    <rdar://problem/68894931>

    Reviewed by Tim Horton.

    Source/WebKit:

    Avoid hash lookups with zero nodeIDs.

    * WebProcess/WebPage/RemoteLayerTree/RemoteScrollingCoordinator.mm:
    (WebKit::RemoteScrollingCoordinator::isRubberBandInProgress const):
    (WebKit::RemoteScrollingCoordinator::isUserScrollInProgress const):
    (WebKit::RemoteScrollingCoordinator::isScrollSnapInProgress const):

    LayoutTests:

    * platform/ios-wk2/TestExpectations:

    Canonical link: https://commits.webkit.org/229374@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@267092 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/228499.169@safari-610-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-610-branch@267674 268f45cc-cd09-0410-ab3c-d52691b4dbfc